--- a/source/index.html
+++ b/source/index.html
@@ -78,22 +78,22 @@
       <h2 class="products__title">Latest Products</h2>
       <div class="products__items">
         <div class="products__item">
-          <p>Man</p>
+          <p class="products__text">Man</p>
         </div>
         <div class="products__item">
-          <p>Woman</p>
+          <p class="products__text">Woman</p>
         </div>
         <div class="products__item">
-          <p>Watches</p>
+          <p class="products__text">Watches</p>
         </div>
         <div class="products__item">
-          <p>40% Off
+          <p class="products__text  products__text--block">40% Off
             <br> New Autumn
             <br> Collection
           </p>
         </div>
         <div class="products__item">
-          <p>Mega sale
+          <p class="products__text  products__text--block">Mega sale
             <br> on items from
             <br> spirit collection</p>
         </div>
@@ -103,137 +103,162 @@
   <section class="items">
     <div class="items__wrapper">
       <h2 class="items__title">Trending Items</h2>
-      <div class="peppermint peppermint-inactive" id="peppermint2">
-        <figure>
+      <div class="peppermint peppermint-inactive  peppermint--items" id="peppermint2">
+        <figure class="items__wrap">
           <div class="items__img">
-            <img src="http://placehold.it/67x56" alt="img" width="67" height="56">
+            <img src="img/items-img.jpg" alt="img" width="570" height="570">
           </div>
-          <h3>NATHAN STEWART JACKET</h3>
-          <p class="slider__item-textUp  slider__item-textUp--items">Spring / Summer Collection</p>
+          <div class="items__block">
+            <h3>NATHAN STEWART JACKET</h3>
+            <p class="items__text  items__text--line">Spring / Summer Collection</p>
 
-          <p>Classic Nathan Stewart Jacket from his latest collection. This item is loved by many just because of it’s simle style. Simple lines,lovely texture,it suits almost everybody. It comes in six different colors,and all sizes. </p>
-          <h4>FASHION TIP: </h4>
-          <p>With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
-          <input type="radio" name="sizes" value="M" id="M">
-          <input type="radio" name="sizes" value="L" id="L">
-          <input type="radio" name="sizes" value="XL" id="XL">
-          <input type="radio" name="sizes" value="XXL" id="XXL">
-          <div class="items__control">
-            <label class="items__control-btn" for="M"></label>
-            <label class="items__control-btn" for="L"></label>
-            <label class="items__control-btn" for="XL"></label>
-            <label class="items__control-btn" for="XXL"></label>
+            <p class="items__text">Classic Nathan Stewart Jacket from his latest collection. This item is loved by many just because of it’s simle style. Simple lines,lovely texture,it suits almost everybody. It comes in six different colors,and all sizes. </p>
+            <h4>FASHION TIP: </h4>
+            <p class="items__text">With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
+
+            <input class="items__input1" type="radio" name="sizes" value="M" id="input1">
+            <label class="items__control-btn" for="input1">M</label>
+            <input class="items__input2" type="radio" name="sizes" value="L" id="input2">
+            <label class="items__control-btn" for="input2">L</label>
+            <input class="items__input3" type="radio" name="sizes" value="XL" id="input3">
+            <label class="items__control-btn" for="input3">XL</label>
+            <input class="items__input4" type="radio" name="sizes" value="XXL" id="input4">
+            <label class="items__control-btn" for="input4">XXL</label>
+
+            <a class="btn  btn--items" href="">Shop Now</a>
+            <a class="btn  btn--items" href="">SIZE GUIDE</a>
           </div>
-          <a class="btn" href="">Shop Now</a>
-          <a class="btn" href="">SIZE GUIDE</a>
         </figure>
-        <figure>
+        <figure class="items__wrap">
           <div class="items__img">
-            <img src="http://placehold.it/67x56" alt="img" width="67" height="56">
+            <img src="img/items-img.jpg" alt="img" width="570" height="570">
           </div>
-          <h3>NATHAN STEWART JACKET</h3>
-          <p class="slider__item-textUp  slider__item-textUp--items">Spring / Summer Collection</p>
+          <div class="items__block">
+            <h3>NATHAN STEWART JACKET</h3>
+            <p class="items__text  items__text--line">Spring / Summer Collection</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, odit incidunt distinctio autem necessitatibus iure, sapiente, minima ipsum molestiae ipsa maiores. Non fugit omnis quas.</p>
-          <h4>FASHION TIP: </h4>
-          <p>With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
-          <input type="radio" name="sizes" value="M" id="M">
-          <input type="radio" name="sizes" value="L" id="L">
-          <input type="radio" name="sizes" value="XL" id="XL">
-          <input type="radio" name="sizes" value="XXL" id="XXL">
-          <div class="items__control">
-            <label class="items__control-btn" for="M"></label>
-            <label class="items__control-btn" for="L"></label>
-            <label class="items__control-btn" for="XL"></label>
-            <label class="items__control-btn" for="XXL"></label>
+            <p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, odit incidunt distinctio autem necessitatibus iure, sapiente, minima ipsum molestiae ipsa maiores. Non fugit omnis quas.</p>
+            <h4>FASHION TIP: </h4>
+            <p class="items__text">With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
+
+            <input class="items__input5" type="radio" name="sizes" value="M" id="input5">
+            <label class="items__control-btn" for="input5">M</label>
+            <input class="items__input6" type="radio" name="sizes" value="L" id="input6">
+            <label class="items__control-btn" for="input6">L</label>
+            <input class="items__input7" type="radio" name="sizes" value="XL" id="input7">
+            <label class="items__control-btn" for="input7">XL</label>
+            <input class="items__input8" type="radio" name="sizes" value="XXL" id="input8">
+            <label class="items__control-btn" for="input8">XXL</label>
+
+            <a class="btn  btn--items" href="">Shop Now</a>
+            <a class="btn  btn--items" href="">SIZE GUIDE</a>
           </div>
-          <a class="btn" href="">Shop Now</a>
-          <a class="btn" href="">SIZE GUIDE</a>
         </figure>
-        <figure>
+        <figure class="items__wrap">
           <div class="items__img">
-            <img src="http://placehold.it/67x56" alt="img" width="67" height="56">
+            <img src="img/items-img.jpg" alt="img" width="570" height="570">
           </div>
-          <h3>NATHAN STEWART JACKET</h3>
-          <p class="slider__item-textUp  slider__item-textUp--items">Spring / Summer Collection</p>
+          <div class="items__block">
+            <h3>NATHAN STEWART JACKET</h3>
+            <p class="items__text  items__text--line">Spring / Summer Collection</p>
 
-          <p>Classic Nathan Stewart Jacket from his latest collection. This item is loved by many just because of it’s simle style. Simple lines,lovely texture,it suits almost everybody. It comes in six different colors,and all sizes. </p>
-          <h4>FASHION TIP: </h4>
-          <p>With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
-          <input type="radio" name="sizes" value="M" id="M">
-          <input type="radio" name="sizes" value="L" id="L">
-          <input type="radio" name="sizes" value="XL" id="XL">
-          <input type="radio" name="sizes" value="XXL" id="XXL">
-          <div class="items__control">
-            <label class="items__control-btn" for="M"></label>
-            <label class="items__control-btn" for="L"></label>
-            <label class="items__control-btn" for="XL"></label>
-            <label class="items__control-btn" for="XXL"></label>
+            <p class="items__text">Classic Nathan Stewart Jacket from his latest collection. This item is loved by many just because of it’s simle style. Simple lines,lovely texture,it suits almost everybody. It comes in six different colors,and all sizes. </p>
+            <h4>FASHION TIP: </h4>
+            <p class="items__text">With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
+
+            <input class="items__input9" type="radio" name="sizes" value="M" id="input9">
+            <label class="items__control-btn" for="input9">M</label>
+            <input class="items__input10" type="radio" name="sizes" value="L" id="input10">
+            <label class="items__control-btn" for="input10">L</label>
+            <input class="items__input11" type="radio" name="sizes" value="XL" id="input11">
+            <label class="items__control-btn" for="input11">XL</label>
+            <input class="items__input12" type="radio" name="sizes" value="XXL" id="input12">
+            <label class="items__control-btn" for="input12">XXL</label>
+
+            <a class="btn  btn--items" href="">Shop Now</a>
+            <a class="btn  btn--items" href="">SIZE GUIDE</a>
           </div>
-          <a class="btn" href="">Shop Now</a>
-          <a class="btn" href="">SIZE GUIDE</a>
         </figure>
-        <figure>
+        <figure class="items__wrap">
           <div class="items__img">
-            <img src="http://placehold.it/570x570" alt="img" width="570" height="570">
+            <img src="img/items-img.jpg" alt="img" width="570" height="570">
           </div>
-          <h3>NATHAN STEWART JACKET</h3>
-          <p class="slider__item-textUp  slider__item-textUp--items">Spring / Summer Collection</p>
+          <div class="items__block">
+            <h3>NATHAN STEWART JACKET</h3>
+            <p class="items__text  items__text--line">Spring / Summer Collection</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem quidem dicta, ex, eos sapiente similique consequuntur asperiores expedita, a quia laudantium impedit sit natus facilis fuga laboriosam ipsum. Odio, culpa. </p>
-          <h4>FASHION TIP: </h4>
-          <p>With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
-          <input type="radio" name="sizes" value="M" id="M">
-          <input type="radio" name="sizes" value="L" id="L">
-          <input type="radio" name="sizes" value="XL" id="XL">
-          <input type="radio" name="sizes" value="XXL" id="XXL">
-          <div class="items__control">
-            <label class="items__control-btn" for="M"></label>
-            <label class="items__control-btn" for="L"></label>
-            <label class="items__control-btn" for="XL"></label>
-            <label class="items__control-btn" for="XXL"></label>
-          </div>
-          <a class="btn" href="">Shop Now</a>
-          <a class="btn" href="">SIZE GUIDE</a>
+            <p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem quidem dicta, ex, eos sapiente similique consequuntur asperiores expedita, a quia laudantium impedit sit natus facilis fuga laboriosam ipsum. Odio, culpa. </p>
+            <h4>FASHION TIP: </h4>
+            <p class="items__text">With this jacket,Nathan Stewart sunglasses go hand in hand!</p>
+
+            <input class="items__input13" type="radio" name="sizes" value="M" id="input13">
+            <label class="items__control-btn" for="input13">M</label>
+            <input class="items__input14" type="radio" name="sizes" value="L" id="input14">
+            <label class="items__control-btn" for="input14">L</label>
+            <input class="items__input15" type="radio" name="sizes" value="XL" id="input15">
+            <label class="items__control-btn" for="input15">XL</label>
+            <input class="items__input16" type="radio" name="sizes" value="XXL" id="input16">
+            <label class="items__control-btn" for="input16">XXL</label>
+
+            <a class="btn  btn--items" href="">Shop Now</a>
+            <a class="btn  btn--items" href="">SIZE GUIDE</a>
         </figure>
+        </figure>
+        </div>
       </div>
-    </div>
   </section>
   <section class="blog">
     <div class="blog__wrapper">
       <h2 class="blog__title">From The Blog</h2>
       <div class="slider">
-        <svg xmlns="http://www.w3.org/2000/svg">
-          <symbol id="review-arrow-left" viewBox="0 0 21.706 41.719">
-            <path d="M2.045 20.86L21.458 1.445c.33-.33.33-.867 0-1.198-.33-.33-.867-.33-1.197 0L.25 20.26c-.33.33-.33.868 0 1.198L20.26 41.47c.165.166.383.25.6.25s.434-.084.6-.25c.33-.33.33-.866 0-1.197L2.044 20.86z" />
-          </symbol>
-          <symbol id="review-arrow-right" viewBox="0 0 21.706 41.719">
-            <path d="M19.66 20.86L.25 1.445c-.33-.33-.33-.867 0-1.198.33-.33.867-.33 1.197 0L21.458 20.26c.33.33.33.867 0 1.197L1.445 41.47c-.164.166-.382.25-.6.25s-.433-.084-.598-.25c-.33-.33-.33-.866 0-1.197L19.66 20.86z" />
-          </symbol>
-        </svg>
+        <div class="svg-wrapper" style="height: 0; width: 0; position: absolute; visibility: hidden">
+          <svg xmlns="http://www.w3.org/2000/svg">
+            <symbol id="review-arrow-left" viewBox="0 0 21.706 41.719">
+              <path d="M2.045 20.86L21.458 1.445c.33-.33.33-.867 0-1.198-.33-.33-.867-.33-1.197 0L.25 20.26c-.33.33-.33.868 0 1.198L20.26 41.47c.165.166.383.25.6.25s.434-.084.6-.25c.33-.33.33-.866 0-1.197L2.044 20.86z" />
+            </symbol>
+            <symbol id="review-arrow-right" viewBox="0 0 21.706 41.719">
+              <path d="M19.66 20.86L.25 1.445c-.33-.33-.33-.867 0-1.198.33-.33.867-.33 1.197 0L21.458 20.26c.33.33.33.867 0 1.197L1.445 41.47c-.164.166-.382.25-.6.25s-.433-.084-.598-.25c-.33-.33-.33-.866 0-1.197L19.66 20.86z" />
+            </symbol>
+          </svg>
+        </div>
         <div class="slider__inner">
           <div class="slider__item">
-            <div class="slider__img">
-              <img src="http://placehold.it/570x400" alt="img" width="570" height="400">
+            <div class="slider__block">
+              <div class="slider__img">
+                <img src="img/slider__item1.jpg" alt="img" width="570" height="400">
+              </div>
+              <h3>GERMAN FASHION WIZARDS</h3>
+              <small>By James Steed   |   Fashion   </small>
+              <p>Just amazing! That is how i can describe this person. So creative,so inspiring. I was watching her create in her small studio in London and i was amazed at how every little detail gets included in her creaions. From frames,to glass thickness she blew me away...</p>
+              <a class="btn  btn--slider" href="">Read more</a>
             </div>
-            <h3>GERMAN FASHION WIZARDS</h3>
-            <p>Just amazing! That is how i can describe this person. So creative,so inspiring. I was watching her create in her small studio in London and i was amazed at how every little detail gets included in her creaions. From frames,to glass thickness she blew me away...</p>
-            <a class="btn" href="">Read more</a>
+            <div class="slider__block">
+              <div class="slider__img">
+                <img src="img/slider__item2.jpg" alt="img" width="570" height="400">
+              </div>
+              <h3>ANNE STEWART’S SUNGLASSES</h3>
+              <small>By Marry Beard   |   Trending   </small>
+              <p>This week we had the chance of interviewing two creative artists from Germany. These guys are simply amazing at what they do with the European fashion scene and this year at Paris Fashion Week they introduced their new collection.</p>
+              <a class="btn btn--slider" href="">Read more</a>
+            </div>
           </div>
           <div class="slider__item">
-            <div class="slider__img">
-              <img src="http://placehold.it/570x400" alt="img" width="570" height="400">
+            <div class="slider__block">
+              <div class="slider__img">
+                <img src="http://placehold.it/570x400" alt="img" width="570" height="400">
+              </div>
+              <p>Задача организации, в особенности же дальнейшее развитие различных форм деятельности представляет собой интересный эксперимент проверки систем массового участияучастия.</p>
+              <a class="btn  btn--slider" href="">Read more</a>
             </div>
-            <h3>ANNE STEWART’S SUNGLASSES</h3>
-            <p>This week we had the chance of interviewing two creative artists from Germany. These guys are simply amazing at what they do with the European fashion scene and this year at Paris Fashion Week they introduced their new collection.</p>
-            <a class="btn" href="">Read more</a>
-          </div>
-          <div class="slider__item">
-            <div class="slider__img">
-              <img src="http://placehold.it/570x400" alt="img" width="570" height="400">
+            <div class="slider__block">
+              <div class="slider__img">
+                <img src="img/slider__item2.jpg" alt="img" width="570" height="400">
+              </div>
+              <h3>GERMAN FASHION WIZARDS</h3>
+              <small>By James Steed   |   Fashion   </small>
+              <p>Just amazing! That is how i can describe this person. So creative,so inspiring. I was watching her create in her small studio in London and i was amazed at how every little detail gets included in her creaions. From frames,to glass thickness she blew me away...</p>
+              <a class="btn  btn--slider" href="">Read more</a>
             </div>
-            <p>Задача организации, в особенности же дальнейшее развитие различных форм деятельности представляет собой интересный эксперимент проверки систем массового участияучастия.</p>
-            <a class="btn" href="">Read more</a>
           </div>
         </div>
         <svg class="slider__arrow slider__arrow--left">
@@ -249,7 +274,7 @@
     <div class="subscribe__wrapper">
       <h2>SUBSCRIBE TO OUR NEWSLETTER TO RECEIVE LATEST NEWS AND OFFERS</h2>
       <form action="" method="post">
-        <input type="email">
+        <input type="email" placeholder="EMAIL ADDRESS">
         <button type="submit">Subscribe</button>
       </form>
     </div>
